--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 98%; /* brighter background */
+    --background: black; /* brighter background */
     --foreground: 222.2 47.4% 11.2%; /* darker text */
 
     --card: 0 0% 100%;
